# pymc-marketing

./: .flake8  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitignore.amltmp  .pre-commit-config.yaml  .readthedocs.yml  .test_durations  <tempfile._TemporaryFileWrapper object at 0x293d8f340>  ACTIONABLE_ITEMS.md  CLAUDE.md  CONTRIBUTING.md  CUSTOM_CHANGES.md  Dockerfile  Makefile  PYMC6_MIGRATION_GUIDE.md  README.md  REVIEW.md  REVIEW_SUMMARY.md  cdnow_make.py  codecov.yml  conftest.py  docs-requirements.txt  environment.yml  experiment-designer-issue.md  lint-requirements.txt  monkeytype.sqlite3  multiplicative_models.md  mypy.ini  optimization.py  pyproject.toml  requirements.txt  rtd-requirements.txt  setup.cfg  setup.py  setupegg.py  test-requirements.txt  test_dependancies.py  test_model  test_model_multi
.claude/: CLAUDE.md
.claude/agents/: duplicate-finder.md  triage.md
.claude/commands/: create_plan_generic.md  create_plan_issue.md  create_plan_tdd.md  implement_plan.md  plan_postmortem.md  plan_vault_note.md  research_codebase.md  research_codebase_generic.md  research_codebase_issue.md  verify_tests.md
.cursor/commands/: code_best_practice.md  research.md
.cursor/plans/: sb-ab88a3d6.plan.md
.cursor/rules/: basic.mdc
.cursor/skills/: mmm-modeling
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md  dependabot.yml  labeler.yml  pull_request_template.md  release.yml
.github/ISSUE_TEMPLATE/: config.yml
.github/pr-summaries/: 2355-experiment-designer.md
.github/workflows/: backcompat.yml  bot-prs.yml  broken-link-checker.yml  cc-gha-implement.yml  cc-gha-iterate.yml  cc-gha-plan.yml  cc-gha-research.yml  ci.yml  docs.yml  duplicate-issues.yml  generate-test-durations.yml  implement-plan.yml  install-conda-env.yml  iterate-plan.yml  iterate-research.yml  label-blank-issue.yml  notebooks.yml  pipy.yml  plan-on-comment.yml  pr-auto-label.yml  pre-commit.yml  pypi.yml  release.yml  research-on-issue.yml  rtd-link-preview.yml  slow-tests-issue.yml  streamlit_url_health.yml  test.yml  test_notebook.yml  test_notebook_mmm.yml  triage.yml  tutorial_notebook.yml  uml.yml  update-test-issues.yml  validate-lockfile.yml
benchmark/: README.md  __init__.py  agent_interface.py  backends.py  cli.py  ground_truth.py  report.ipynb  runner.py  schemas.py  scoring.py
benchmark/tasks/: mmm_case_study.yaml  mmm_multidimensional_recovery.yaml  mmm_roas_calibration.yaml
data/: TravelMode_wide.csv  apparel_static_cov.csv  apparel_trans.csv  bgbb_donations.csv  case_study_data.csv  cdnow_transactions.csv  choice_crackers.csv  choice_wide_heating.csv  clv_cumulative_transactions.csv  clv_quickstart.csv  funnel_data.csv  media_tvp_data.csv  mmm_example.csv  mmm_multidimensional_example.csv  mmm_multidimensional_example_true_parameters.nc  mmm_roas_data.csv  mock_cgp_data.csv  monthly_impressions.csv  multidimensional_mock_data.csv  sbg_case1_cohorts.csv  sbg_paper.csv  sbg_reg_hi_cohorts.csv
data/config_files/: basic_model.yml  cost_per_unit_example.yml  example_with_original_scale_vars.yml  multi_dimensiona_hierarchical_model_nested_config.yml  multi_dimensional_example_model.yml  multi_dimensional_example_model_with_2_geos.yml  multi_dimensional_fivetran.yml  multi_dimensional_hierarchical_model.yml  multi_dimensional_hierarchical_model_nested_config.yml  multi_dimensional_hierarchical_with_arbitrary_effects_model.yml  multi_dimensional_model.yml  multi_dimensional_with_events.yml  original_scale_vars_at_end.yml  wrong_adstock_class.yml  wrong_distribution.yml  wrong_parameter_type.yml  wrong_saturation_params.yml
data/fivetran_examples/: ad_report_schema.csv  shopify_orders_schema.csv
data/processed/: X.csv  y.csv
datasets/: demo_hierarchical.csv  mmm_example.csv
dev/dashboard/: app.py
docs/: MMM_PLOTTING_SUMMARY.md  mmm_plotting_functionality_comparison.md
docs/plans/: 2026-02-26-cast-channel-data-to-float-design.md  2026-02-26-cast-channel-data-to-float.md  2026-03-05-serialization-overhaul-design.md  2026-03-10-mmmplotsuite-comprehensive-issues.md  2026-03-10-mmmplotsuite-decomposition-approaches.md  2026-03-11-figure-customization-design.md  2026-03-11-mmmplotsuite-v2-attack-plan-design.md  2026-03-13-serialization-scope-options.md  2026-03-16-phase1-part1-core-and-components.md  2026-03-16-phase1-part2-effects-and-media.md  2026-03-16-phase1-part3-verification-and-special.md  2026-03-18-phase2-orchestrator-migration-cleanup.md  2026-03-18-phase2-scope-guide.md  2026-03-19-phase2-remaining-tasks.md  2026-03-20-test-audit-design.md  2026-03-20-test-audit-implementation.md  2026-03-25-pr2-diagnostics-namespace.md  2026-03-30-pr5-decomposition-namespace-design.md  2026-03-30-pr5-decomposition-namespace.md  serialization-workflow-for-MMM.md
docs/source/: CONTRIBUTING.md  conf.py  (+2 more)
notebooks/: continuous-contractual.ipynb  continuous-non-contractual.ipynb  custom_distributions.py  gamma_gamma.ipynb  mmm_clv_case_study.ipynb  mmm_example.ipynb  mmm_example_time_varying_coef.ipynb  plot_utils.py  sBG.ipynb  test.py
paper/: paper.bib  paper.md
pymc_marketing/: __init__.py  bass.py  causal_utils.py  constants.py  decorators.py  deserialize.py  hsgp_kwargs.py  metrics.py  mlflow.py  model_builder.py  model_config.py  model_graph.py  paths.py  plot.py  prior.py  pytensor_utils.py  serialization.py  serialization_migration.py  special_priors.py  utils.py  version.py
pymmmc/: .amlignore.amltmp  __init__.py  clv.py  custom_distributions.py  distributions.py  mmm.py  model.py  plot_utils.py  transformers.py  utils.py
scripts/: __init__.py  clv_roadmap.py  clv_roadmapper.py  generate_gallery.py  validate_api_docs.py  validate_notebook_watermark.py
tests/: __init__.py  conftest.py  test_causal_utils.py  test_deserialize.py  test_dummy.py  test_hsgp_kwargs.py  test_metrics.py  test_mlflow.py  test_model_builder.py  test_model_config.py  test_model_graph.py  test_paths.py  test_plot.py  test_prior.py  test_pytensor_utils.py  test_serialization.py  test_serialization_migration.py  test_special_priors.py  test_transformers.py  test_utils.py
(+677 files in other folders)
